--- a/server/d1/static/test/comment_styles.css
+++ b/server/d1/static/test/comment_styles.css
@@ -8,7 +8,7 @@
 font-family: '微软雅黑', arial, sans-serif; 
 padding: 10px;}
 
-#special_div_for_anwcl_comment_board {position: fixed; z-index:999; _overflow-x:hidden; width: 40%; height: 550px; background: #ffffff; right: -40%; border-top-left-radius:0.5em;border-bottom-left-radius:0.5em; border:3px solid #d3d3d3; border-right:0px; top:50px;}
+#special_div_for_anwcl_comment_board {position: fixed; z-index:2147483646; _overflow-x:hidden; width: 40%; height: 550px; background: #ffffff; right: -40%; border-top-left-radius:0.5em;border-bottom-left-radius:0.5em; border:3px solid #d3d3d3; border-right:0px; top:8%;}
 
 #boardLeft{
 position:absolute;top:40%;left:-40px;width:35px;border:2px solid #aaaaaa;
@@ -19,8 +19,8 @@ font-family: '微软雅黑', arial, sans-serif;
 
 #boardDesc{height:100px;}
 #boardDesc p{width: 1em;font-size: 20px;letter-spacing: 40px;line-height:25px;
-margin:10px auto 0 auto;font-family: '微软雅黑', arial, sans-serif; font-weight: bold;}
-#boardButton{height:30px;}
+margin:10px auto 0 auto;font-family: '微软雅黑', arial, sans-serif; font-weight: bold; color: #000000}
+#boardButton{height:30px; color: #000000}
 
 #commentForm{font-size:14px;height:10px;}
 #loginForm{font-size:14px;height:10px;}
