--- a/server/d1/news/templates/news/base.html
+++ b/server/d1/news/templates/news/base.html
@@ -4,7 +4,7 @@
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
-    <img src="{% static "images/sitelogo.png" %}" alt="Logo" />
+    <img src="{% static "icons\ionicons-master\src\icon-alert.svg" %}" alt="Logo" />
     {% block content %}{% endblock %}
 </body>
 </html>
