--- a/server/d1/comments/templates/comments/comment_create_view.html
+++ b/server/d1/comments/templates/comments/comment_create_view.html
@@ -1,6 +1,6 @@
 <h1>Add Comment</h1>
 
-<form action="{% url "comment_create" %}" method="POST">
+<form action="{% url 'comment_create' %}" method="POST">
   {% csrf_token %}
   <ul>
     {{ form.as_ul }}
@@ -8,4 +8,4 @@
   <input id="save_comment" type="submit" value="Save" />
 </form>
 
-<a href="{% url "comment_list" %}">back to list</a>
+<a href="{% url 'comment_list' %}">back to list</a>
