hmm, update template.

--- a/server/d1/comments/templates/comments/comment_board_get.html
+++ b/server/d1/comments/templates/comments/comment_board_get.html
@@ -1,28 +1,26 @@
 {% load range %}
-<ul class="list-group">
 
+{{ refer_url }}
+<ul class="list-group">
 {% for message in messages %}
     <li class="list-group-item">
     <strong>路人甲</strong>
-    {% for ele in message %}
-        {{ ele }} 
+    {% for element in message %}
+        {{ element }} 
 	{% endfor %}
     <br>
     </li>
 {% endfor %}
 
-{% if n_messages < message_per_page %}
-    {% range n_messages:message_per_page as i %}
-        <li class="list-group-item">
-        <br>
-        </li>
-    {% endrange %}
-{% endif %}
+{% for blank in blanks %}
+    <li class="list-group-item">
+    <br>
+    </li>
+{% endfor %}
 </ul>
 
 <div><ul class="pagination">
 <li><a href="#">«</a></li>
-
 {% range 1:n_page as i %}
     <li><a href="#">
     {{ i }}
