--- a/server/d1/static/test/comment_styles.css
+++ b/server/d1/static/test/comment_styles.css
@@ -9,7 +9,8 @@ font-family: '微软雅黑', arial, sans-serif;
 padding: 10px;}
 
 #special_div_for_anwcl_comment_board {position: fixed; z-index:2147483646; _overflow-x:hidden; width: 40%; height: 100%; right: -40%; 
-background: #ffffff; border-top-left-radius:0.5em;border-bottom-left-radius:0.5em; border:3px solid #d3d3d3; border-right:0px; top:0%;}
+background: #ffffff; border-top-left-radius:0.5em;border-bottom-left-radius:0.5em; border:3px solid #d3d3d3; border-right:0px; top:0%;
+box-shadow: rgba(0, 0, 0, 0.0980392) -10px 0px 10px 0px;-webkit-box-shadow: rgba(0, 0, 0, 0.0980392) -10px 0px 10px 0px;}
 
 #boardLeft{
 position:absolute;top:40%;left:-40px;width:35px;border:2px solid #aaaaaa;
