update bootstrap cdn

--- a/server/d1/vine_comment/templates/comments/comment_view_meta.html
+++ b/server/d1/vine_comment/templates/comments/comment_view_meta.html
@@ -1,11 +1,13 @@
+<html>
+
+<head>
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
-
-<link rel="stylesheet" href="http://www.anwcl.com:8000/static/bootstrap/css/bootstrap.min.css">
-<link rel="stylesheet" href="http://www.anwcl.com:8000/static/bootstrap/css/bootstrap-theme.min.css">
-
+<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
 <link rel="stylesheet" href="http://www.anwcl.com:8000/static/test/comment_styles.css" type="text/css" media="all" />
-<script src="http://www.anwcl.com:8000/static/bootstrap/js/bootstrap.min.js"></script>
+</head>
 
+<body>
 <div id="commentBoard">
 	<div id="boardRight" >
 		<ul class="nav nav-pills" class="panel panel-default">
@@ -52,3 +54,6 @@
 
 </div>
 <script type="text/javascript" src="http://www.anwcl.com:8000/static/test/commentBoard.js"></script>
+</body>
+
+</html>
