--- a/server/d1/vine_comment/templates/comments/comment_view_meta.html
+++ b/server/d1/vine_comment/templates/comments/comment_view_meta.html
@@ -1,9 +1,10 @@
 <html>
 
 <head>
-<script type="text/javascript" src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
-<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
-<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="http://www.anwcl.com:8000/static/bootstrap/js/jquery-1.8.2.min.js"></script>
+<link rel="stylesheet" href="http://www.anwcl.com:8000/static/bootstrap/css/bootstrap.min.css">
+<script src="http://www.anwcl.com:8000/static/bootstrap/js/bootstrap.min.js"></script>
+
 <link rel="stylesheet" href="http://www.anwcl.com:8000/static/test/comment_styles.css" type="text/css" media="all" />
 </head>
 
@@ -28,29 +29,31 @@
 		  </div><!-- /.col-lg-6 -->
 		</div><!-- /.row -->
 		<br>
+		
 		<div id="showMsg">
-			<ul class="list-group">
-			{% for message in p_comment.object_list %}
-			    <li class="list-group-item">
-			    <strong>路人甲</strong>
-				{{ message }} 
-			    <br>
-			    </li>
-			{% endfor %}
-			</ul>
-
-			<ul class='pagination' style="margin: 0;">
-			<li><a href="#">«</a></li>
-			{% for num in p_comment.paginator.page_range %}
-			  {% ifequal num p_comment.number %}
-			    <li><span class="current"><b>{{ num }}</b></span></li>
-			  {% else %}<!-- ?page={{ num }} -->
-			    <li><a href="?page={{ num }}">{{ num }}</a></li>
-			  {% endifequal %} 
-			{% endfor %}
-			<li><a href="#">»</a></li>
-			</ul>
-		</div>
+            <ul class="list-group">
+            {% for message in p_comment.object_list %}
+                <li class="list-group-item">
+                <strong>路人甲</strong>
+                {{ message }} 
+                <br>
+                </li>
+            {% endfor %}
+            </ul>
+            
+            <ul class='pagination'>
+            <li><a href="#">«</a></li>
+            {% for num in p_comment.paginator.page_range %}
+              {% ifequal num p_comment.number %}
+                <li><span class="current"><b>{{ num }}</b></span></li>
+              {% else %}<!-- ?page={{ num }} -->
+                <li><a href="?page={{ num }}">{{ num }}</a></li>
+              {% endifequal %} 
+            {% endfor %}
+            <li><a href="#">»</a></li>
+            </ul>
+		</div><!-- /.showMsg -->
+		
 		<div class="row">
 		  <div class="col-lg-6">
 			<div class="input-group">
@@ -64,7 +67,7 @@
 	</div>
 
 </div>
-<script type="text/javascript" src="http://www.anwcl.com:8000/static/test/commentBoard.js"></script>
 </body>
+<script type="text/javascript" src="http://www.anwcl.com:8000/static/test/commentBoard.js"></script>
 
 </html>
