--- a/server/d1/vine_comment/templates/comments/comment_view_meta.html
+++ b/server/d1/vine_comment/templates/comments/comment_view_meta.html
@@ -42,27 +42,7 @@
 		</div><!-- /.row -->
 		<br>
 		
-		<div id="showMsg">
-            <ul class="list-group">
-            {% for message in p_comment.object_list %}
-                <li class="list-group-item">
-                <strong>路人甲</strong> {{ message.time_added|naturaltime }} {{message.comment_str}} <br>
-                </li>
-            {% endfor %}
-            </ul>
-            
-            <ul class='pagination'>
-            <li><a href="#">«</a></li>
-            {% for num in p_comment.paginator.page_range %}
-              {% ifequal num p_comment.number %}
-                <li><span class="current"><b>{{ num }}</b></span></li>
-              {% else %}
-                <li><a href="?page={{ num }}">{{ num }}</a></li>
-              {% endifequal %} 
-            {% endfor %}
-            <li><a href="#">»</a></li>
-            </ul>
-		</div><!-- /.showMsg -->
+{% include "comments/comment_view_raw.html" %}
 		
 		<div class="row">
 		  <div class="col-lg-6">
