--- a/server/d1/vine_comment/templates/comments/comment_view_raw.html
+++ b/server/d1/vine_comment/templates/comments/comment_view_raw.html
@@ -1,11 +1,9 @@
-{% load range %}
+{% load humanize %}
 
 <ul class="list-group">
 {% for message in p_comment.object_list %}
     <li class="list-group-item">
-    <strong>路人甲</strong>
-	{{ message }} 
-    <br>
+    <strong>路人甲</strong> <span id='comment_time'> {{ message.time_added|naturaltime }}</span> {{message.comment_str}} <br>
     </li>
 {% endfor %}
 </ul>
@@ -15,7 +13,7 @@
 {% for num in p_comment.paginator.page_range %}
   {% ifequal num p_comment.number %}
     <li><span class="current"><b>{{ num }}</b></span></li>
-  {% else %}<!-- ?page={{ num }} -->
+  {% else %}
     <li><a href="?page={{ num }}">{{ num }}</a></li>
   {% endifequal %} 
 {% endfor %}
