--- a/server/d1/vine_comment/templates/comments/comment_view_meta.html
+++ b/server/d1/vine_comment/templates/comments/comment_view_meta.html
@@ -16,6 +16,16 @@
 </head>
 
 <body>
+
+<div class="alert-messages" id="message-drawer" style="opacity: 0; top: 47px;">
+  <div class="message ">
+    <div class="message-inside">
+      <span class="message-text">你已吐槽成功！</span>
+      <a class="dismiss" href="#" style="display: none;">×</a>
+    </div>
+  </div>
+</div>
+
 <div id="commentBoard">
 	<div id="boardRight" >
 		<ul class="nav nav-pills" class="panel panel-default">
@@ -30,7 +40,8 @@
 <div class="popUp" title="Please Wait..." style="display:none;">
     <p>One moment please, the form is processing.</p>
 </div>
-  -->
+-->
+
 		<div class="row">
 		  <div class="col-lg-6">
 			<div class="input-group">
