--- a/server/d1/vine_comment/templates/comments/comment_view_meta.html
+++ b/server/d1/vine_comment/templates/comments/comment_view_meta.html
@@ -17,15 +17,6 @@
 
 <body>
 
-<div class="alert-messages" id="message-drawer" style="opacity: 0; top: 47px;">
-  <div class="message ">
-    <div class="message-inside">
-      <span class="message-text">你已吐槽成功！</span>
-      <a class="dismiss" href="#" style="display: none;">×</a>
-    </div>
-  </div>
-</div>
-
 <div id="commentBoard">
 	<div id="boardRight" >
 		<ul class="nav nav-pills" class="panel panel-default">
@@ -36,11 +27,14 @@
 		</ul>
 		<br>
 
-<!--
-<div class="popUp" title="Please Wait..." style="display:none;">
-    <p>One moment please, the form is processing.</p>
-</div>
--->
+		<div class="alert-messages" id="message-drawer" style="opacity: 0; top: 60px; display: none;">
+		  <div class="message ">
+		    <div class="message-inside">
+		      <span class="message-text">你已吐槽成功！</span>
+		      <a class="dismiss" href="#" style="display: none;">×</a>
+		    </div>
+		  </div>
+		</div>
 
 		<div class="row">
 		  <div class="col-lg-6">
