--- a/server/d1/vine_comment/templates/comments/comment_view_meta.html
+++ b/server/d1/vine_comment/templates/comments/comment_view_meta.html
@@ -30,7 +30,7 @@
 		<div class="alert-messages" id="message-drawer" style="opacity: 0; top: 60px; display: none;">
 		  <div class="message ">
 		    <div class="message-inside">
-		      <span class="message-text">你已吐槽成功！</span>
+		      <span class="message-text">吐槽成功！</span>
 		      <a class="dismiss" href="#" style="display: none;">×</a>
 		    </div>
 		  </div>
