--- a/server/d1/vine_comment/templates/comments/comment_view_raw.html
+++ b/server/d1/vine_comment/templates/comments/comment_view_raw.html
@@ -3,7 +3,7 @@
 <ul class="list-group">
 {% for message in p_comment.object_list %}
     <li class="list-group-item">
-    <strong>路人甲</strong> <span id='comment_time'> {{ message.time_added|naturaltime }}</span> {{message.comment_str}} <br>
+    <strong>{{ message.auther_ip }}</strong> <span id='comment_time'> {{ message.time_added|naturaltime }}</span> {{message.comment_str}} <br>
     </li>
 {% endfor %}
 </ul>
