--- a/server/d1/vine_comment/templates/comments/comment_iframe_view.html
+++ b/server/d1/vine_comment/templates/comments/comment_iframe_view.html
@@ -1,12 +1,12 @@
 
-
-<link rel="stylesheet" href="http://www.anwcl.com:8000/static/test/comment_styles.css" type="text/css" media="all" />
-<script type="text/javascript" src="http://www.anwcl.com:8000/static/test/floatCommentBoard.js"></script>
+{% load staticfiles %}
+<link rel="stylesheet" href="{% static "test/comment_styles.css" %}" type="text/css" media="all" />
+<script type="text/javascript" src="{% static "test/floatCommentBoard.js" %}"></script>
 
 <div id="special_div_for_anwcl_comment_board">
     <iframe src="http://www.anwcl.com:8000/comment/{{ url_b64 }}" width="100%" height="100%" frameborder="0"></iframe>
   	<div id="boardLeft" >
 		<div id="boardDesc"><p>神 吐 槽 —</p></div>
-		<div id="boardButton"><strong><</strong></div>
+		<div id="boardButton"><a href="#"><strong><</strong></a></div>
 	</div>
 </div>
