fix static url and make all boardButton clickable

--- a/server/d1/vine_comment/templates/comments/base.html
+++ b/server/d1/vine_comment/templates/comments/base.html
@@ -33,6 +33,6 @@
 		{% endblock %}
 </div>
 </body>
-<script type="text/javascript" src="{% static "http://www.anwcl.com:8000/static/test/commentBoard.js" %}"></script>
+<script type="text/javascript" src="{% static "test/commentBoard.js" %}"></script>
 
 </html>
