--- a/server/d1/static/test/comment_styles.css
+++ b/server/d1/static/test/comment_styles.css
@@ -19,6 +19,16 @@ position:absolute;top:40%;left:-40px;width:35px;border:2px solid #aaaaaa;
 font-size:20px;text-align:center; background:#ffffff;
 border-top-left-radius:0.3em;border-bottom-left-radius:0.3em;
 font-family: '微软雅黑', arial, sans-serif; 
+-webkit-touch-callout: none;
+-webkit-user-select: none;
+-khtml-user-select: none;
+-moz-user-select: none;
+-ms-user-select: none;
+user-select: none;
+}
+
+#boardLeft a{
+text-decoration:none;
 }
 
 #boardDesc{height:100px;}
