--- a/server/d1/vine_comment/templates/comments/comment_iframe_view.html
+++ b/server/d1/vine_comment/templates/comments/comment_iframe_view.html
@@ -4,9 +4,11 @@
 <script type="text/javascript" src="{% static "test/floatCommentBoard.js" %}"></script>
 
 <div id="special_div_for_anwcl_comment_board">
-    <iframe src="http://www.anwcl.com:8000/comment/{{ url_b64 }}" width="100%" height="100%" frameborder="0"></iframe>
-  	<div id="boardLeft" >
-		<div id="boardDesc"><p>神 吐 槽 —</p></div>
-		<div id="boardButton"><a href="#"><strong><</strong></a></div>
-	</div>
+  <iframe src="http://www.anwcl.com:8000/comment/{{ url_b64 }}" width="100%" height="100%" frameborder="0"></iframe>
+  <div id="boardLeft" >
+    <a href="#">
+      <div id="boardDesc"><p>神 吐 槽 —</p></div>
+      <div id="boardButton"><strong><</strong></div>
+    </a>
+  </div>
 </div>
