--- a/server/d1/vine_comment/templates/comments/base.html
+++ b/server/d1/vine_comment/templates/comments/base.html
@@ -31,6 +31,7 @@
 		{% block content%}
 
 		{% endblock %}
+	</div>
 </div>
 </body>
 <script type="text/javascript" src="{% static "test/commentBoard.js" %}"></script>
