add padding to iframe body so that it doesnt show the bottom nav

--- a/server/d1/vine_comment/templates/comments/base.html
+++ b/server/d1/vine_comment/templates/comments/base.html
@@ -17,7 +17,7 @@
 <link rel="stylesheet" href="{% static "test/comment_styles.css" %}" type="text/css" media="all" />
 </head>
 
-<body>
+<body style="padding:5px;">
 
 <div id="commentBoard">
 	<div id="boardRight" >
