--- a/server/d1/vine_comment/templates/comments/comment_iframe_view.html
+++ b/server/d1/vine_comment/templates/comments/comment_iframe_view.html
@@ -3,8 +3,14 @@
 <link rel="stylesheet" href="{% static "test/comment_styles.css" %}" type="text/css" media="all" />
 <script type="text/javascript" src="{% static "test/floatCommentBoard.js" %}"></script>
 
+<style>
+#loadImg{position:absolute;}
+#loadImg div{display:table-cell;text-align:center;vertical-align:middle;}
+</style>
+
 <div id="special_div_for_anwcl_comment_board">
-  <iframe src="http://www.anwcl.com:8000/comment/{{ url_b64 }}" width="100%" height="100%" frameborder="0"></iframe>
+  <div id="loadImg"><div><img src="{% static "icons/loading1.gif" %}" /></div></div>
+  <iframe src="http://www.anwcl.com:8000/comment/{{ url_b64 }}" width="100%" height="100%" frameborder="0" onload="document.getElementById('loadImg').style.display='none';""></iframe>
   <div id="boardLeft" >
     <a href="#">
       <div id="boardDesc"><p>神 吐 槽 —</p></div>
