fix long word to break-word

--- a/server/d1/static/test/comment_styles.css
+++ b/server/d1/static/test/comment_styles.css
@@ -89,6 +89,10 @@ text-align: center;
 
 #editor {overflow:scroll; max-height:300px}
 
+.list-group-item {
+word-wrap: break-word;
+}
+
 /************************************************************************************
 MEDIA QUERIES
 *************************************************************************************/
