--- a/server/d1/vine_comment/templates/comments/base.html
+++ b/server/d1/vine_comment/templates/comments/base.html
@@ -22,7 +22,7 @@
 <div id="commentBoard">
 	<div id="boardRight" >
 		<ul class="nav nav-pills" class="panel panel-default">
-		  <li class="{% active request "comment" %}" title="{{ index_url }}"><a href="{% url "comment" x %}">
+		  <li class="{% active request "comment" %}" title="{{ index_url }}"><a href="{% url "comment" url_b64 %}">
 		  <span class="badge pull-right">{{ p_comment.paginator.count }}</span> 口水</a> </li>
 		  <li class="{% active request "account" %}"><a href="{% url "account" x %}"><span class="badge pull-right">2</span> 账户</a></li>
 		  <li class="{% active request "letter" %}"><a href="{% url "letter" x %}"><span class="badge pull-right">33</span> 信封</a></li>
