make comment board more compact

--- a/server/d1/static/test/comment_styles.css
+++ b/server/d1/static/test/comment_styles.css
@@ -93,6 +93,14 @@ text-align: center;
 word-wrap: break-word;
 }
 
+.list-group {
+margin-bottom: 0px;
+}
+
+.pagination {
+margin: 10px 0;
+}
+
 /************************************************************************************
 MEDIA QUERIES
 *************************************************************************************/
