--- a/server/d1/vine_comment/templates/comments/comment_view_raw.html
+++ b/server/d1/vine_comment/templates/comments/comment_view_raw.html
@@ -9,13 +9,17 @@
 </ul>
 
 <ul class='pagination'>
-<li><a href="#">«</a></li>
+{% if p_comment.has_previous %}
+<li><a href="?page={{ p_comment.previous_page_number }}">«</a></li>
+{% endif %}
 {% for num in p_comment.paginator.page_range %}
   {% ifequal num p_comment.number %}
     <li><span class="current"><b>{{ num }}</b></span></li>
   {% else %}
     <li><a href="?page={{ num }}">{{ num }}</a></li>
-  {% endifequal %} 
+  {% endifequal %}
 {% endfor %}
-<li><a href="#">»</a></li>
+{% if p_comment.has_next %}
+<li><a href="?page={{ p_comment.next_page_number }}">»</a></li>
+{% endif %}
 </ul>
