--- a/server/d1/vine_comment/templates/comments/test.html
+++ b/server/d1/vine_comment/templates/comments/test.html
@@ -1,4 +1,10 @@
 <div>
+  <h3>Login using <a href="http://oauth.net/" title="OAuth">OAuth</a> from:</h3>
+  <ul>
+  {% for name in social_auth.backends.oauth %}
+    <li><a rel="nofollow" href="{% url "socialauth_begin" name %}">{{ name|title }}</a></li>
+  {% endfor %}
+  </ul>
   <h3>Login using <a href="http://tools.ietf.org/html/draft-ietf-oauth-v2-10" title="OAuth2">OAuth2</a> from:</h3>
   <ul>
   {% for name in social_auth.backends.oauth2 %}
