refine structure and add login/register

--- a/server/d1/vine_comment/templates/comments/account_view.html
+++ b/server/d1/vine_comment/templates/comments/account_view.html
@@ -1,6 +1,29 @@
+
 {% extends "comments/base.html" %}
+
+{% load i18n %}
 {% block content %}
 
-Not implement yet
+{% if user.is_authenticated %}
+
+        {% trans "Logged in" %}: {{ user.username }} 
+        (<a href="{% url 'auth_logout' %}">{% trans "Log out" %}</a> | 
+        <a href="{% url 'auth_password_change' %}">{% trans "Change password" %}</a>)
+
+{% else %}
+    <div class="container">
+
+      <form class="form-signin" role="form">
+        <h2 class="form-signin-heading">请登录</h2>
+        <input type="text" class="form-control" placeholder="账户/邮箱" required autofocus>
+        <input type="password" class="form-control" placeholder="密码" required>
+        <label class="checkbox">
+          <input type="checkbox" value="remember-me"> 下次自动登录
+        </label>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">登录</button>
+      </form>
+
+    </div> <!-- /container -->
+{% endif %}
 
 {% endblock %}
