prepare for raw templates, migration for ajax

--- a/server/d1/vine_comment/templates/comments/setting_view.html
+++ b/server/d1/vine_comment/templates/comments/setting_view.html
@@ -1,6 +1,6 @@
 {% extends "comments/base.html" %}
 {% block content %}
 
-Not implement yet
+{% include "comments/setting_raw.html" %}
 
 {% endblock %}
