--- a/server/d1/vine_comment/templates/comments/letter_view.html
+++ b/server/d1/vine_comment/templates/comments/letter_view.html
@@ -1,6 +1,6 @@
 {% extends "comments/base.html" %}
 {% block content %}
 
-Not implement yet
+{% include "comments/letter_raw.html" %}
 
 {% endblock %}
