--- a/server/d1/vine_comment/templates/comments/comment_view_raw.html
+++ b/server/d1/vine_comment/templates/comments/comment_view_raw.html
@@ -16,10 +16,19 @@
   {% ifequal num p_comment.number %}
     <li><span class="current"><b>{{ num }}</b></span></li>
   {% else %}
-    <li><a href="?page={{ num }}">{{ num }}</a></li>
+    <li id='pagination_{{num}}'><a href="#">{{ num }}</a></li>
+    <script type="text/javascript">
+      var l = document.location;
+      $('#pagination_{{num}}').on('click', function() {
+    	  $('#showMsg').load(l.origin + '/ajax' + l.pathname + '?page='+{{ num }});
+      });
+    </script>
+
   {% endifequal %}
 {% endfor %}
 {% if p_comment.has_next %}
 <li><a href="?page={{ p_comment.next_page_number }}">»</a></li>
 {% endif %}
+
+
 </ul>
