--- a/server/d1/vine_comment/templates/comments/comment_view_raw.html
+++ b/server/d1/vine_comment/templates/comments/comment_view_raw.html
@@ -10,7 +10,13 @@
 
 <ul class='pagination'>
 {% if p_comment.has_previous %}
-<li><a href="?page={{ p_comment.previous_page_number }}">«</a></li>
+<li id='pagination_arrow_{{ p_comment.previous_page_number }}'><a href='#'>«</a></li>
+<script type="text/javascript">
+  var l = document.location;
+  $('#pagination_arrow_{{ p_comment.previous_page_number }}').on('click', function() {
+	  $('#showMsg').load(l.origin + '/ajax' + l.pathname + '?page={{ p_comment.previous_page_number }}');
+  });
+</script>
 {% endif %}
 {% for num in p_comment.paginator.page_range %}
   {% ifequal num p_comment.number %}
@@ -20,14 +26,20 @@
     <script type="text/javascript">
       var l = document.location;
       $('#pagination_{{num}}').on('click', function() {
-    	  $('#showMsg').load(l.origin + '/ajax' + l.pathname + '?page='+{{ num }});
+    	  $('#showMsg').load(l.origin + '/ajax' + l.pathname + '?page={{ num }}');
       });
     </script>
 
   {% endifequal %}
 {% endfor %}
 {% if p_comment.has_next %}
-<li><a href="?page={{ p_comment.next_page_number }}">»</a></li>
+<li id='pagination_arrow_{{ p_comment.next_page_number }}'><a href="#">»</a></li>
+<script type="text/javascript">
+  var l = document.location;
+  $('#pagination_arrow_{{ p_comment.next_page_number }}').on('click', function() {
+	  $('#showMsg').load(l.origin + '/ajax' + l.pathname + '?page={{ p_comment.next_page_number }}');
+  });
+</script>
 {% endif %}
 
 
