even though I can signin github, but its a good begin...maybe...

--- a/server/d1/vine_comment/templates/comments/account_raw.html
+++ b/server/d1/vine_comment/templates/comments/account_raw.html
@@ -3,8 +3,7 @@
 {% if user.is_authenticated %}
 
         {% trans "Logged in" %}: {{ user.username }} 
-        (<a href="{% url 'auth_logout' %}">{% trans "Log out" %}</a> | 
-        <a href="{% url 'auth_password_change' %}">{% trans "Change password" %}</a>)
+        (<a href="/logout/">{% trans "Log out" %}</a>)
 
 {% else %}
     <div class="container">
