--- a/server/d1/social_auth_app/templates/social_signin.html
+++ b/server/d1/social_auth_app/templates/social_signin.html
@@ -86,9 +86,9 @@
 
 .social-login-btn {
   margin: 5px;
-  width: 20%;
+  /*width: 20%;*/
   font-size: 250%;
-  padding: 0;
+  /*padding: 0;*/
 }
 
 .social-login-more {
@@ -160,7 +160,7 @@
 
 <div class="btn-group social-login-more">
   <button type="button" class="btn btn-default dropdown-toggle btn-block" data-toggle="dropdown">
-    更多...
+    more...
   </button>
   <ul class="dropdown-menu text-left " role="menu">
     <li><a href="#"><i class="fa fa-tumblr-sign"></i>   Tumblr</a></li>
