--- a/server/d1/d1/templates/registration/logout.html
+++ b/server/d1/d1/templates/registration/logout.html
@@ -1,6 +1,8 @@
-{% extends "base.html" %}
-{% load i18n %}
+{% extends "registration/base.html" %}
+
+{% block title %}Logged out{% endblock %}
 
 {% block content %}
-<p>{% trans "Logged out" %}</p>
+<h1>You've been logged out.</h1>
+<p>Thanks for stopping by; when you come back, don't forget to <a href="/accounts/login/">log in</a> again.</p>
 {% endblock %}
