--- a/server/d1/d1/templates/registration/password_change_done.html
+++ b/server/d1/d1/templates/registration/password_change_done.html
@@ -1,6 +1,16 @@
-{% extends "base.html" %}
+{% extends "registration/base.html" %}
 {% load i18n %}
 
+{% block title %}{% trans 'Password change successful' %}{% endblock %}
+
 {% block content %}
-<p>{% trans "Password changed" %}</p>
+
+<h1>{% trans 'Password change successful' %}</h1>
+
+<p>{% trans 'Your password was changed.' %}</p>
+
+{% endblock %}
+
+{% block content-related %}
+
 {% endblock %}
