--- a/server/d1/d1/templates/registration/activate.html
+++ b/server/d1/d1/templates/registration/activate.html
@@ -1,18 +1,16 @@
-{% extends "base.html" %}
-{% load i18n %}
+{% extends "registration/base.html" %}
+
+{% block title %}Account activated{% endblock %}
 
 {% block content %}
-
-{% if account %}
-
-<p>{% trans "Account successfully activated" %}</p>
-
-<p><a href="{% url auth_login %}">{% trans "Log in" %}</a></p>
-
-{% else %}
-
-<p>{% trans "Account activation failed" %}</p>
-
-{% endif %}
-
+  <h1>Account activated.</h1>
+  {% load humanize %}
+  {% if account %}
+    <p>Thanks for signing up! Now you can <a href="/accounts/login/">log in</a>.</p>
+  {% else %}
+    <p>Sorry, it didn't work. Either your activation link was incorrect, or
+    the activation key for your account has expired; activation keys are
+    only valid for {{ expiration_days|apnumber }} days after
+    registration.</p>
+  {% endif %}
 {% endblock %}
