--- a/server/d1/d1/templates/registration/activation_complete.html
+++ b/server/d1/d1/templates/registration/activation_complete.html
@@ -1,9 +1,8 @@
-{% extends "base.html" %}
+{% extends "registration/base.html" %}
 
-{% block title %}Account activated{% endblock %}
+{% block title %}Activation complete{% endblock %}
 
 {% block content %}
-  <h1>Account activated.</h1>
-  {% load humanize %}  
-    <p>Thanks for signing up! Now you can <a href="/accounts/login/">log in</a>.</p>
+<h1>Congratulations!</h1>
+<p>Your registration is now complete. Go to the site and start having fun!</p>
 {% endblock %}
