--- a/server/d1/d1/templates/registration/password_reset_complete.html
+++ b/server/d1/d1/templates/registration/password_reset_complete.html
@@ -1,10 +1,21 @@
-{% extends "base.html" %}
+{% extends "registration/base.html" %}
 {% load i18n %}
+
+{% block breadcrumbs %}<div class="breadcrumbs"></div>{% endblock %}
+
+{% block title %}{% trans 'Password reset complete' %}{% endblock %}
 
 {% block content %}
 
-<p>{% trans "Password reset successfully" %}</p>
+<h1>{% trans 'Password reset complete' %}</h1>
 
-<p><a href="{% url auth_login %}">{% trans "Log in" %}</a></p>
+<p>{% trans "Your password has been set.  You may go ahead and log in now." %}</p>
+
+<p><a href="{{ login_url }}">{% trans 'Log in' %}</a></p>
+
+{% endblock %}
+
+
+{% block content-related %}
 
 {% endblock %}
