--- a/server/d1/d1/templates/registration/password_reset_form.html
+++ b/server/d1/d1/templates/registration/password_reset_form.html
@@ -1,11 +1,20 @@
-{% extends "base.html" %}
+{% extends "registration/base.html" %}
 {% load i18n %}
 
-{% block content %}
-<form method="post" action=".">
-  {{ form.as_p }}
-  {% csrf_token %}
+{% block breadcrumbs %}<div class="breadcrumbs"></div>{% endblock %}
 
-  <input type="submit" value="{% trans 'Submit' %}" />
+{% block title %}{% trans "Password reset" %}{% endblock %}
+
+{% block content %}
+
+<h1>{% trans "Password reset" %}</h1>
+
+<p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll e-mail instructions for setting a new one." %}</p>
+
+<form action="" method="post">
+	{% csrf_token %}
+{{ form.email.errors }}
+<p><label for="id_email">{% trans 'E-mail address:' %}</label> {{ form.email }} <input type="submit" value="{% trans 'Reset my password' %}" /></p>
 </form>
+
 {% endblock %}
