--- a/server/d1/d1/templates/registration/registration_complete.html
+++ b/server/d1/d1/templates/registration/registration_complete.html
@@ -1,6 +1,8 @@
-{% extends "base.html" %}
-{% load i18n %}
+{% extends "registration/base.html" %}
+
+{% block title %}Registration complete{% endblock %}
 
 {% block content %}
-<p>{% trans "You are now registered. Activation email sent." %}</p>
+<h1>Check your email</h1>
+<p>An activation link has been sent to the email address you supplied, along with instructions for activating your account.</p>
 {% endblock %}
