all: disable auth for showing

--- a/server/d1/vine_comment/templates/comments/comment_view_raw.html
+++ b/server/d1/vine_comment/templates/comments/comment_view_raw.html
@@ -1,5 +1,5 @@
 {% load humanize %}
-{% if user.is_authenticated %}
+
 
 <ul class="list-group">
 {% for message in p_comment.object_list %}
@@ -46,7 +46,7 @@
 
 </ul>
 
-{% else %} <!-- not authenticated -->
+{% if user.is_authenticated %} <!-- not authenticated -->
 <!-- <iframe src="{% url 'test' %}" frameborder="0" onload="document.getElementById('loadImg').style.display='none';"
 width="100%" height=100% frameborder="0">
 </iframe> -->
