--- a/server/d1/vine_comment/templates/comments/comment_iframe_view.html
+++ b/server/d1/vine_comment/templates/comments/comment_iframe_view.html
@@ -1,7 +1,7 @@
 
 {% load staticfiles %}
-<link rel="stylesheet" href="{% static "test/comment_styles.css" %}" type="text/css" media="all" />
-<script type="text/javascript" src="{% static "test/floatCommentBoard.js" %}"></script>
+<link rel="stylesheet" href="{% static 'test/comment_styles.css' %}" type="text/css" media="all" />
+<script type="text/javascript" src="{% static 'test/floatCommentBoard.js' %}"></script>
 
 <style>
 #loadImg{position:absolute;}
@@ -9,8 +9,8 @@
 </style>
 
 <div id="special_div_for_anwcl_comment_board">
-  <div id="loadImg"><div><img src="{% static "icons/loading1.gif" %}" /></div></div>
-  <iframe id="__vine_comment" src="http://www.anwcl.com:8000/comment/{{ url_b64 }}" width="100%" height="100%" frameborder="0" onload="document.getElementById('loadImg').style.display='none';""></iframe>
+  <div id="loadImg"><div><img src="{% static 'icons/loading1.gif' %}" /></div></div>
+  <iframe id="__vine_comment" src="/comment/{{ url_b64 }}" width="100%" height="100%" frameborder="0" onload="document.getElementById('loadImg').style.display='none';"></iframe>
   <div id="boardLeft" >
     <a href="#">
       <div id="boardDesc"><p>神 吐 槽 —</p></div>
