make the number in badge respond to new comment adding

--- a/server/d1/vine_comment/templates/comments/comment_view_meta.html
+++ b/server/d1/vine_comment/templates/comments/comment_view_meta.html
@@ -13,7 +13,9 @@
 			<div class="input-group">
 			  <textarea rows="1" class="form-control" id="commentTop" name="commentTop" placeholder="可输入5-140个字"></textarea>
 			  <span class="input-group-btn">
-				<button class="btn btn-default submitComment" data-loading-text="评论中" id="submitCommentTop" type="button">评论</button>
+          <button class="btn btn-default submitComment" data-loading-text="评论中" id="submitCommentTop" type="button" onclick="onComment()">
+            评论
+          </button>
 			  </span>
 			</div><!-- /input-group -->
 		  </div><!-- /.col-lg-6 -->
@@ -27,7 +29,9 @@
 			<div class="input-group">
 			  <textarea rows="1" class="form-control" id="commentBottom" name="commentBottom" placeholder="可输入5-140个字"></textarea>
 			  <span class="input-group-btn">
-				<button class="btn btn-default submitComment" data-loading-text="评论中" id="submitCommentBottom" type="button">评论</button>
+          <button class="btn btn-default submitComment" data-loading-text="评论中" id="submitCommentBottom" type="button" onclick="onComment()">
+            评论
+          </button>
 			  </span>
 			</div><!-- /input-group -->
 		  </div><!-- /.col-lg-6 -->
