vine_comment: fix a typo in base.html

--- a/server/d1/vine_comment/templates/comments/base.html
+++ b/server/d1/vine_comment/templates/comments/base.html
@@ -45,7 +45,7 @@
               <a href="/logout/">{{ assoc.provider }} logout</a>
             </li>
           {% endfor %}
-            <li><a href="/logout/">normal logout</li>
+            <li><a href="/logout/">normal logout</a></li>
             </ul>
         {% endif %}
           </li>
