--- a/server/d1/vine_comment/templates/comments/base.html
+++ b/server/d1/vine_comment/templates/comments/base.html
@@ -14,11 +14,13 @@
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
 <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
+<!--
 <link href="http://cdn.bootcss.com/twitter-bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
+-->
 <!-- <link href="http://cdn.bootcss.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet"> -->
 
 {% load staticfiles %}
-<link rel="stylesheet" href="{% static "test/comment_styles.css" %}" type="text/css" media="all" />
+<link rel="stylesheet" href="{% static 'test/comment_styles.css' %}" type="text/css" media="all" />
 </head>
 
 <body style="padding:5px;">
@@ -129,7 +131,9 @@
 </div>
 </body>
 <script type="text/javascript" src="{% static "test/commentBoard.js" %}"></script>
+<!--
 <script src="http://cdn.bootcss.com/jquery/2.0.3/jquery.min.js"></script>
 <script src="http://cdn.bootcss.com/twitter-bootstrap/3.0.3/js/bootstrap.min.js"></script>
+-->
 
 </html>
