--- a/server/d1/vine_comment/templates/test.html
+++ b/server/d1/vine_comment/templates/test.html
@@ -1,4 +1,5 @@
-<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
+{% load staticfiles %}
+<script src="{% static 'jquery/2.0.3/jquery.min.js' %}"></script>
 <script src="/static/js/btoa.js"></script>
 <script type="text/javascript">
 $(document).ready(function(){
