--- a/server/d1/vine_comment/templates/comments/comment_view_raw.html
+++ b/server/d1/vine_comment/templates/comments/comment_view_raw.html
@@ -50,5 +50,6 @@
 <!-- <iframe src="{% url 'test' %}" frameborder="0" onload="document.getElementById('loadImg').style.display='none';"
 width="100%" height=100% frameborder="0">
 </iframe> -->
+{% else %}
 {% include "social_signin_raw.html" %}
 {% endif %}
