--- a/server/d1/vine_comment/templates/comments/comment_view_raw.html
+++ b/server/d1/vine_comment/templates/comments/comment_view_raw.html
@@ -5,8 +5,14 @@
 {% for message in p_comment.object_list %}
   <li class="list-group-item">
     <span style="float:right">
-      <i class="fa fa-thumbs-o-up"></i>{{message.up_users|length}}
-      <i class="fa fa-thumbs-down fa-flip-horizontal"></i>{{message.down_users|length}}
+      <script type="text/javascript">
+        var id = "{{message.id}}";
+        function up() {
+          $.get("/ajax/up/comment/"+id);
+        };
+      </script>
+      <i class="fa fa-thumbs-o-up" style="cursor:pointer" onclick="up()"></i>{{ message.up_users|length }}
+      <i class="fa fa-thumbs-down fa-flip-horizontal"></i>{{ message.down_users|length }}
      </span>
      <strong>{% if message.user %}{{ message.user }}{% else %}{{ message.auther_ip }}{% endif %}</strong>
      <span id='comment_time'> {{ message.time_added|naturaltime }}</span> {{message.comment_str}} <br>
